<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.geomaps.MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/latitud"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/text_latitud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView1"
        android:ems="10"
        android:gravity="center_vertical|right|fill"
        android:hint="@string/hint_latitud"
        android:textSize="16sp"
        android:typeface="normal" />

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignLeft="@+id/text_longitud"
        android:layout_alignRight="@+id/text_longitud"
        android:layout_below="@+id/button_myLocation" />

    <EditText
        android:id="@+id/text_longitud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_latitud"
        android:layout_below="@+id/textView2"
        android:ems="10"
        android:gravity="center_vertical|right|fill"
        android:hint="@string/hint_longitud"
        android:textSize="16sp"
        android:typeface="normal" >

    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_latitud"
        android:layout_below="@+id/text_latitud"
        android:text="@string/longitud"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/button_myLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/map"
        android:layout_below="@+id/text_longitud"
        android:text="@string/text_button_myLocation"
        android:textSize="14sp" />

    <Button
        android:id="@+id/button_findLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button_myLocation"
        android:layout_alignTop="@+id/button_myLocation"
        android:layout_toRightOf="@+id/button_myLocation"
        android:text="@string/text_button_findLocation"
        android:textSize="14sp" />

</RelativeLayout>